fix: fixed most major code smells #SPG-122